# divine-badges

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-preview.yml
assets/: auth_callback.html  badge.html  edit_badge.html  me.html  new.html  profile.html  relays.html
assets/app/: boot.js
assets/app/auth/: profile.js  profile.test.js  return_to.js  return_to.test.js  session.js  session.test.js
assets/app/media/: blossom.js  blossom.test.js
assets/app/nostr/: badges.js  badges.test.js  constants.js  identity.js  identity.test.js  profile_metadata.js  profile_metadata.test.js  publish.js  publish.test.js  relay.js  relay.test.js
assets/app/views/: badge.js  common.js  edit_badge.js  markdown.js  markdown.test.js  me.js  me.test.js  me_empty_state.js  new.js  new_text_fields.js  new_text_fields.test.js  profile.js  relays.js
docs/superpowers/plans/: 2026-04-13-diviner-awards-worker.md  (+3 more)
migrations/: 0001_initial.sql  0002_indexes.sql  0003_winner_nip05.sql
src/: awards.rs  clock.rs  config.rs  discord.rs  divine_api.rs  eligibility.rs  error.rs  landing_page.rs  lib.rs  models.rs  nip19.rs  nostr.rs  period.rs  ports.rs  profile.rs  public_routes.rs  relay_client.rs  repository.rs  state.rs  use_cases.rs  worker_entry.rs
tests/: awards_tests.rs  config_tests.rs  discord_tests.rs  eligibility_tests.rs  landing_page_tests.rs  nostr_tests.rs  period_tests.rs  preview_workflow.test.js  repository_sql_tests.rs  state_tests.rs  use_case_tests.rs
(+4 files in other folders)
