[package]
name = "divine-badges"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
bech32 = "0.11"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "wasmbind"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
k256 = { version = "0.13.4", features = ["schnorr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CloseEvent", "ErrorEvent", "Event", "MessageEvent", "WebSocket"] }
worker = { version = "0.8", features = ["d1"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
